# Canon

./: .gitignore
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: api_router.py  ws_router.py
backend/app/core/: config.py  paths.py
backend/app/service/: __init__.py  sequence_db.py  sequence_service.py  sequence_stream_service.py
backend/assets/weight/target_2/target_2_weight_openvino/: model.xml
backend/assets/weight/target_3/target_3_weight_openvino/: model.xml
backend/assets/weight/target_4/target_4_weight_openvino/: model.xml
backend/data/db/: factory_test.db  sequence_runs.sqlite3
backend/db/: database.py
frontend/src/: App.tsx  store.ts
